# tfidfcv

./: api_main.py  example1_czech_no_preprocessing.py  example_1_czech.py  example_2_english.py  example_2_english_no_preprocessing.py  example_3_metacritic.py  metacritic_convert_raw_to_processed.py  preprocessor_test.py  pyproject.toml
resources/: czech_documents.json  english_documents.json
src/: cosine_similarity.py  doc_id_service.py  document.py  metacritic_review_do.py  metacritic_reviews.py  tf_idf.py
src/api/: api.py  dtos.py
src/logging/: logger_factory.py
src/preprocessing/: czech_stemmer.py  metacritic_preprocessing.py  preprocessor.py  tokenizer.py  whitespace_preprocessor.py
src/preprocessor/: porter_stemmer.py  preprocessor.py  tokenizer.py
src/utils/: collections.py
