[tool.poetry]
name = "tfidfcv"
version = "0.1.0"
description = ""
authors = ["Vaclav Honzik <vaclavhonzik98@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
regex = "^2022.3.15"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
